--- a/config.yaml
+++ b/config.yaml
@@ -6,11 +6,11 @@ data_sources:
 output_dir: site
 ultraviolet_theme: "twilight"
 webprefix: "/Scratch"
-base_url: "http://yannesposito.com"
+base_url: "http://ypassword.espozito.com"
 author_uri: "http://yannesposito.com"
 rss_uri:
-  fr: "http://feeds.feedburner.com/yannespositocomfr"
-  en: "http://feeds.feedburner.com/yannespositocomen"
+  fr: "http://feeds.feedburner.com/ypasswordespozitocomfr"
+  en: "http://feeds.feedburner.com/ypasswordespozitocomen"
 
 # les langues
 languages:
